--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "formik": "^2.2.1",
     "gatsby": "^2.24.79",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "prettier": "2.1.2"
