--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "faunadb": "^3.0.1",
     "formik": "^2.2.1",
     "gatsby": "^2.24.79",
+    "gatsby-plugin-material-ui": "^2.1.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "yup": "^0.29.3"
